# Leadwort

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  pch.h  resources.rc  vcpkg.json
scripts/: Get-ProjectDump.ps1
src/: CoordinateSystem.md  main.cpp
src/editor/: EditorLayer.h  ImGuiTheme.h
src/engine/asset-management/private/: AssetKey.h  AssetManager.cpp  DefaultAssets.cpp
src/engine/asset-management/public/: AssetManager.h  DefaultAssets.h
src/engine/components/: Component.h
src/engine/components/behaviours/private/: Behaviour.cpp  Behaviour.inl
src/engine/components/behaviours/public/: Behaviour.h  DirectionaLight.h  FirstPersonController.h
src/engine/components/private/: Camera.cpp  MeshRenderer.cpp  Transform.cpp
src/engine/components/public/: Camera.h  MeshRenderer.h  Renderer.h  Transform.h
src/engine/core/math/private/: VecConversions.cpp
src/engine/core/math/public/: AABB.h  Color.h  Frustum.h  Mat3.h  Mat4.h  Math.h  Plane.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
src/engine/core/private/: Application.cpp  Entity.cpp  Game.cpp  Scene.cpp  Window.cpp
src/engine/core/public/: Application.h  Core.h  Entity.h  Game.h  Layers.h  Scene.h  Tags.h  Time.h  Window.h
src/engine/engine-assets/shaders/: shd_fallback.glsl  shd_grid.glsl  shd_lit.glsl  shd_skybox.glsl  shd_unlit.glsl
src/engine/engine-assets/shaders/include/: shd_pbr.glsl
src/engine/engine-assets/shaders/postprocess/: shd_post_process.glsl
src/engine/engine-assets/shaders/postprocess/include/: shd_post_process_effects.glsl
src/engine/rendering/bindables/private/: CubeMap.cpp  Material.cpp  Mesh.cpp  RenderTarget.cpp  Shader.cpp  Texture.cpp
src/engine/rendering/bindables/public/: Bindable.h  CubeMap.h  Material.h  Mesh.h  MeshKey.h  RenderTarget.h  Shader.h  Texture.h  VertexLayout.h
src/engine/rendering/private/: CameraUBO.cpp  GLStateCache.cpp  LightingUBO.cpp  Model.cpp  PostProcess.cpp  SceneCollector.cpp  SkyBox.cpp
src/engine/rendering/public/: CameraUBO.h  DefaultRenderPasses.h  DrawCommands.h  GLStateCache.h  LightingUBO.h  MatrixUtils.h  Model.h  PostProcess.h  RenderPass.h  RenderPipelineState.h  RenderQueue.h  SceneCollector.h  Skybox.h
src/engine/scenes/: EmptyScene.h
src/engine/systems/private/: BehaviourSystem.cpp  CameraSystem.cpp  Input.cpp  LightingSystem.cpp  RenderSystem.cpp  SceneSystem.cpp
src/engine/systems/public/: BehaviourSystem.h  CameraSystem.h  FileWatcherSystem.h  Input.h  LightingSystem.h  RenderSystem.h  SceneSystem.h  ShaderWatcher.h
src/engine/ui/: UILayer.h
src/engine/utils/private/: PrimitiveMeshes.cpp
src/engine/utils/public/: Color.h  Logger.h  PrimitiveMeshes.h  ReactiveCommand.h  Singleton.h
tests/: CMakeLists.txt  TransformTests.cpp  main_test.cpp
